src/objects/Portal_User_Registration__c/Portal_User_Registration__c.object-meta.xml
<CustomObject>
    <description>Custom object to track the MyAerospace Portal User Registration</description>
    <label>Portal User Registration</label>
    <nameField>
        <displayFormat>PUR-{00000}</displayFormat>
        <label>Portal User Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal User Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>