src/objects/Portal_User_Registration__c/fields/AppID__c.field-meta.xml
<CustomField>
    <fullName>AppID__c</fullName>
    <label>AppID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>