src/objects/Portal_User_Registration__c/fields/Company_Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Company_Not_Listed__c</fullName>
    <description>Field to hold the success iteration for Company Not Listed step in Portal</description>
    <label>Company_Not_Listed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>