src/objects/Portal_User_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal User Registrations</relationshipLabel>
    <relationshipName>Portal_User_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>