src/objects/Portal_User_Registration__c/fields/Contact_Creation_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Contact_Creation_in_SFDC__c</fullName>
    <description>Field to hold the success iteration for Contact Creation in SFDC step in Portal</description>
    <label>Contact_Creation_in_SFDC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>