src/objects/Portal_User_Registration__c/fields/Contact_Match__c.field-meta.xml
<CustomField>
    <fullName>Contact_Match__c</fullName>
    <description>Field to hold the success iteration for Contact Match step in Portal</description>
    <label>Contact_Match</label>
    <length>1</length>
    <type>Text</type>
</CustomField>