src/objects/Portal_User_Registration__c/fields/Contact_OR_Domain_Match__c.field-meta.xml
<CustomField>
    <fullName>Contact_OR_Domain_Match__c</fullName>
    <label>Contact_OR_Domain_Match</label>
    <length>10</length>
    <type>Text</type>
</CustomField>