src/objects/Portal_User_Registration__c/fields/Create_HoneywellId__c.field-meta.xml
<CustomField>
    <fullName>Create_HoneywellId__c</fullName>
    <description>Field to hold the success iteration for Create Honeywell ID step in Portal</description>
    <label>Create_HoneywellId</label>
    <length>1</length>
    <type>Text</type>
</CustomField>