src/objects/Portal_User_Registration__c/fields/Create_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Contact__c</fullName>
    <description>Field to hold the success iteration for Create New Contact step in Portal</description>
    <label>Create_New_Contact</label>
    <length>1</length>
    <type>Text</type>
</CustomField>