src/objects/Portal_User_Registration__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Field to hold the Portal User record creation Date</description>
    <label>Created_Date</label>
    <type>DateTime</type>
</CustomField>