src/objects/Portal_User_Registration__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>