src/objects/Portal_User_Registration__c/fields/Domain_Match__c.field-meta.xml
<CustomField>
    <fullName>Domain_Match__c</fullName>
    <description>Field to hold the success iteration for Domain Match step in Portal</description>
    <label>Domain_Match</label>
    <length>1</length>
    <type>Text</type>
</CustomField>