src/objects/Portal_User_Registration__c/fields/Honeywell_ID__c.field-meta.xml
<CustomField>
    <fullName>Honeywell_ID__c</fullName>
    <description>Field to hold the Honeywell ID value provided by Portal user during registration</description>
    <label>Honeywell ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>