src/objects/Portal_User_Registration__c/fields/Initial_Reg__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reg__c</fullName>
    <description>Field to hold the success iteration for Initial registration step in Portal</description>
    <label>Initial_Reg</label>
    <length>1</length>
    <type>Text</type>
</CustomField>