src/objects/Portal_User_Registration__c/fields/Last_Updated_del__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_del__c</fullName>
    <description>Field to hold the Last updated Date/Time for the Portal User record update during registration</description>
    <label>Last_Updated</label>
    <type>DateTime</type>
</CustomField>