src/objects/Portal_User_Registration__c/fields/Select_Company__c.field-meta.xml
<CustomField>
    <fullName>Select_Company__c</fullName>
    <description>Field to hold the success iteration for Select Company step in Portal</description>
    <label>Select_Company</label>
    <length>1</length>
    <type>Text</type>
</CustomField>