src/objects/Portal_User_Registration__c/fields/Select_Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Select_Existing_Contact__c</fullName>
    <description>Field to hold the success iteration for Select Existing Contact step in Portal</description>
    <label>Select_Existing_Contact</label>
    <length>1</length>
    <type>Text</type>
</CustomField>