src/objects/Portal_User_Registration__c/fields/Unidentified_User__c.field-meta.xml
<CustomField>
    <fullName>Unidentified_User__c</fullName>
    <description>Field to hold the success iteration for Unidentified User step in Portal</description>
    <label>Unidentified_User</label>
    <length>1</length>
    <type>Text</type>
</CustomField>