src/objects/Portal_User_Registration__c/fields/Validating_Email__c.field-meta.xml
<CustomField>
    <fullName>Validating_Email__c</fullName>
    <description>Field to hold the success iteration for Validating Email step in Portal</description>
    <label>Validating_Email</label>
    <length>1</length>
    <type>Text</type>
</CustomField>